# elevatorSim

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
docs/: ARCHITECTURE.md  DECISIONS.md  DEMO.md  PANEL_PREP.md
docs/ADR/: 001-language-and-stack.md  002-architecture-style.md  003-cqrs-event-sourcing-rejected.md  004-dispatch-strategy-pattern.md  005-tick-semantics-and-micro-steps.md  006-async-rejected.md  007-persistence-rejected.md  008-express-elevator-modeling.md  009-testing-strategy.md
src/elevator_sim/: __main__.py  config.py
src/elevator_sim/analytics/: comparison.py  statistics.py  visualization.py
src/elevator_sim/cli/: commands.py
src/elevator_sim/domain/: events.py  invariants.py  model.py  strategies.py
src/elevator_sim/engine/: clock.py  runner.py  simulation.py
src/elevator_sim/infrastructure/: csv_parser.py  logging.py  output_writer.py
tests/: conftest.py
tests/fixtures/: sample_requests.csv  stress_3000.csv  stress_500.csv  stress_bidirectional.csv  stress_burst_200.csv  stress_convergence.csv  stress_single_elevator.csv
tests/fixtures/adversarial/: blank_lines.csv  bom.csv  comma_in_id.csv  crlf.csv  duplicate_ids.csv  extra_column.csv  float_values.csv  floor_zero.csv  header_only.csv  huge_floors.csv  missing_column.csv  mixed_newlines.csv  negative_values.csv  non_numeric.csv  quoted.csv  same_floor.csv  semicolon.csv  tab_separated.csv  ten_thousand.csv  unicode_ids.csv  whitespace.csv  wrong_headers.csv
tests/integration/: test_end_to_end.py
tests/unit/domain/: test_invariants.py  test_model.py  (+1 more)
(+2 files in other folders)
