[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elevator-sim"
version = "0.1.0"
description = "Discrete-time destination-dispatch elevator simulation"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "structlog>=24.0",
    "click>=8.0,<9.0",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.8"]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
elevator-sim = "elevator_sim.cli.commands:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/elevator_sim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
